--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.3.4",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "firebase": "^9.19.1",
+    "google-auth-library": "^8.7.0",
     "moment": "^2.29.4",
     "pinia": "^2.0.33",
     "pinia-plugin-persistedstate": "^3.1.0",
